# Kursovaya_Bank_Analysis

./: .env  .env.example  .gitignore  pyproject.toml  structure.txt  transactions.json
data/: operations.xlsx
src/: external_api.py  main.py  reports.py  script.py  services.py  utils.py  views.py
tests/: test_reports.py
