[tool.poetry]
name = "kursovaya-bank-analysis"
version = "0.1.0"
description = ""
authors = ["ildar_safarov <ildarsafarov555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
